--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PK72KTHSB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-4PK72KTHSB');
+    </script>
     <title>모성종 Portfolio | FrontEnd Developer</title>
   </head>
   <body>
